# FFmpegCode

FFmpegCode/app/: CMakeLists.txt  build.gradle
FFmpegCode/app/src/androidTest/java/cc/gl/com/ffmpegcode/: ExampleInstrumentedTest.kt
FFmpegCode/app/src/main/: AndroidManifest.xml
FFmpegCode/app/src/main/cpp/: ffmpegUtil.cpp  native-lib.cpp  native-lib.h
FFmpegCode/app/src/main/java/cc/gl/com/ffmpegcode/: ChooseFileActivity.kt  MainActivity.kt  VideoView.kt
FFmpegCode/app/src/main/java/cc/gl/com/ffmpegcode/app/: App.kt
FFmpegCode/app/src/main/java/cc/gl/com/ffmpegcode/constant/: ExtraKey.kt
FFmpegCode/app/src/main/java/cc/gl/com/ffmpegcode/view/: FileDialog.kt
FFmpegCode/app/src/main/res/drawable/: login_btn_normal_shape.xml  login_btn_press_shape.xml  login_btn_selector.xml  login_edit_text_background.xml
FFmpegCode/app/src/main/res/layout/: activity_choose_file.xml  activity_main.xml  content_input.xml
FFmpegCode/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
FFmpegCode/app/src/test/java/cc/gl/com/ffmpegcode/: ExampleUnitTest.kt
FFmpegCode/ffmpeglib/src/androidTest/java/cc/gl/com/ffmpeglib/: ExampleInstrumentedTest.java
FFmpegCode/ffmpeglib/src/main/: AndroidManifest.xml
FFmpegCode/ffmpeglib/src/test/java/cc/gl/com/ffmpeglib/: ExampleUnitTest.java
